--- a/structure.html
+++ b/structure.html
@@ -7,8 +7,8 @@
   <title>Basic Anatomy of an HTML document</title>
 </head>
 <body>
-  <h1>This is the header in an HTML document.</h1>
+  <h1>The basic anatomy of an HTML document. This is the header in an HTML document.</h1>
   <h2>To specify it as a header, you have to utilize the heading level tags which range from h1 to h6</h2>
-<p>The basic anatomy of an HTML</p>
+<p></p>
 </body>
 </html>
