Creating an ordered list of directions

--- a/structure.html
+++ b/structure.html
@@ -8,7 +8,12 @@
 </head>
 <body>
   <h1>The basic anatomy of an HTML document. This is the header in an HTML document.</h1>
-  <h2>To specify it as a header, you have to utilize the heading level tags which range from h1 to h6</h2>
-<p></p>
+  <h2>To specify it as a header, you have to utilize the heading level tags which range from h1 to h6. </h2>
+<p>
+  <ol>
+    <li>You must start every HTML document with "!DOCTYPE html" which is a required preamble that ensures your document behaves correctly.</li>
+  </ol>
+
+</p>
 </body>
 </html>
