linked the css page

--- a/structure.html
+++ b/structure.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basic Anatomy of an HTML document</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <h1>The basic anatomy of an HTML document. This is the header in an HTML document.</h1>
