adding the strong element to make the document more readable

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Milestones</title>
   <link rel="stylesheet" href="main.css">
+
 </head>
 <body>
   <div id="page">
@@ -35,7 +36,11 @@
       <p>
         View this page's source code (with *View Source*) to see how it works. Go get 'em!
       </p>
+
     </main>
+
+    <a href = "structure.html">Basic Structure </a>
   </div>
+
 </body>
 </html>
