--- a/structure.html
+++ b/structure.html
@@ -9,11 +9,25 @@
 </head>
 <body>
   <h1>The basic anatomy of an HTML document. This is the header in an HTML document.</h1>
-  <h2>To specify it as a header, you have to utilize the heading level tags which range from h1 to h6. </h2>
+  <h2>To specify it as a header, you have to utilize the heading level tags which range from h1 to h6.</h2>
+  <h3>Below, you will find instructions on how to structure a basic HTML document</h3>
+
 <p>
   <ol>
-    <li>You must start every HTML document with "!DOCTYPE html" which is a required preamble that ensures your document behaves correctly.</li>
+    <li>You <em>must</em> start every HTML document with "!DOCTYPE html" which is a required preamble that ensures your document behaves correctly.</li>
+    <li>Second, use the <strong>"html"</strong> element. This element wraps all the content on the entire page and is sometimes known as the root element. </li>
+    <li>Third, the <strong>"head"</strong> element acts as a container for all the information you want to include on an HTML page that is not the content you are showing. </li>
+    <li>Following the "head" element, the <strong>"meta charset = utf-8"</strong> element sets your document to use UTF-8 which includes most characters from the majority of written documents. This element ensures that your document is fit to withstand the textual content you include on it. </li>
+    <li>Fourthly, the <strong>"title"</strong> element sets the title for your page which appears in the brower tab that your page is loaded in. </li>
+    <li>Lastly, the <strong>"body"</strong> element contains <em>all</em> the content that you want to show to web users when they visit your page, whether that's text, images, videos, games, playable audio tracks, or whatever else.</li>
   </ol>
+  <p class = "shortcuts">You can either use the shortcut "html" or an "!" to automatically make these elements appear in order on your HTML document. </h4>
+<p>For a more detailed resource
+  <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics">click here</a> </p>
+<a href="snippet.html">click here</a> for information about snippet
+<p>
+  <a href = "index.html">Return to index page</a>
+</p>
 
 </p>
 </body>
