--- a/structure.html
+++ b/structure.html
@@ -26,7 +26,7 @@
   <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics">click here</a> </p>
 <a href="snippet.html">click here</a> for information about snippet
 <p>
-  <a href = "index.html">Return to index page</a>
+  <a href = "index.html">return to home page</a>
 </p>
 
 </p>
