changing color to lighter pink and centering the second and third headers

--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
       </p>
 
     </main>
-
+<p>
     <a href = "structure.html">Basic Structure </a>
+</p>
+<p>
+    <a href="snippet.html">Snippet</a>
+</p>
   </div>
 
 </body>
