changes made at 4pm on Tuesday

--- a/structure.html
+++ b/structure.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basic Anatomy of an HTML document</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="structure.css">
 </head>
-<body>
+<body2>
   <h1>The basic anatomy of an HTML document. This is the header in an HTML document.</h1>
   <h2>To specify it as a header, you have to utilize the heading level tags which range from h1 to h6.</h2>
   <h3>Below, you will find instructions on how to structure a basic HTML document</h3>
