adding information to the snippet page

--- a/snippet.html
+++ b/snippet.html
@@ -13,14 +13,15 @@
 
 </body>
 
-<h1>Name the tags in the snippet</h1>
+<h1>Using the above code to dive into some basic functions of HTML</h1>
+<h2>Tags</h2>
 <p>
   <ul>
     <ul class="roman">
-        <li>A href tag</li>
+        <li>There are two tags in the above code: the "p" tag and the "a" tag. </li>
         <ul class="square">
-         <li>the anchor element</li>
-         <li>The <.a> element creates a hyperlink to web pages or anything a URL can address </li>
+         <li>The "a" tag is the anchor element which creates hyperlinks to web pages, files, email addressess, locations in the same page, and other URL addresses</li>
+         <li>The "p" tag is the paragraph tag and contains paragraphs of text. It is used frequently when marking up regular text content. </li>
         </ul>
         </li>
         <li>Id tag</li>
