fixing all the errors in snippet - removing the p tags and editing the en to em

--- a/snippet.html
+++ b/snippet.html
@@ -11,48 +11,46 @@
 <h1>Using the below code to dive into some basic functions of HTML</h1>
 <img src="example.jpeg" class = "example" alt = "snippetofcode">
 <h2>Tags</h2>
-<p>
+<ul>
         <li>There are two tags in the above code: the "p" tag and the "a" tag. </li>
          <li>The "a" tag is the anchor element which creates hyperlinks to web pages, files, email addressess, locations in the same page, and other URL addresses.</li>
          <li>The "p" tag is the paragraph tag and contains paragraphs of text. It is used frequently when marking up regular text content. </li>
-  </p>
+</ul>
 
 <p>Here are useful links that provide further explanation of tags:</p>
 <a href = "https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a">Anchor Tag</a>
 <a href = "https://developer.mozilla.org/en-US/docs/Web/HTML/Element/p">Paragraph Tag</a>
 
-</p>
-
 <h2>Nesting</h2>
-<p>
+<ul>
   <li>In this code, the anchor tag is inside the paragraph tag, thus the anchor tag is a child tag of the paragraph tag. This means that if a change is made to the paragraph, the anchor “inherits” this change as well because it is inside the parent tag.
   </li>
-</p>
+</ul>
 
 <h2>Relationship between opening and closing tags</h2>
-<p>
+<ul>
   <li>An <em>opening tag</em> represents the beginning of an element and comprises of a less-than sign followed by an element’s name, and ends with a greater-than sign</li>
   <li>A <em>closing tag</em>represents the end of an element and comprises of a less-than sign followed by a forward slash and the element’s name, and ends with a greater-than sign</li>
   <li>For example, on the code above, the paragraph tag you can see the opening paragraph tag at the beginning of the code and the closing paragraph tag at the end of the code</li>
-</p>
+</ul>
 
 <h2>Anatomy of an Anchor tag</h2>
-<p>
+<ul>
   <li>The content in between the opening and closing tags is the material of that element. In between the opening and closing tags of an anchor link is its content which consists of attributes.</li>
-  <li><en>Attributes</en> are properties that are used to provide additional information about an element. In this snippet, there are four attributes.</li>
+  <li><em>Attributes</em> are properties that are used to provide additional information about an element. In this snippet, there are four attributes.</li>
   <li>Attributes include a name and a value and are defined within the opening tag, after an element's name</li>
   <li>For example, in the snippet above, the value of the href attribute is "https://google.com". The value of the id attribute is “the best link”, the value of the class attribute is “banana”, and the value of the target attribute is "_blank">Google</li>
-</p>
+</ul>
 
 <h2>Purpose and Effect of anchor tag attributes (as seen in code below)</h2>
 <img src="example.jpeg" class = "example" alt = "snippetofcode">
-<p>
+<ul>
   <li>The id attribute identifies an element</li>
   <li>The class attribute classifies an element</li>
   <li>The src attribute specifies a source for embeddable content</li>
   <li>The href attribute provides a hyperlink reference to a linked resource</li>
   <li>The target attribute distinguishes where to display the linked URL as the name for a browsing context (the current tab, a new window, etc.). The target tag has keywords that have special meanings for where to load the URL. For example the _self keyword is the default and specifies to load the URL in the current browsing context. The _blank tag, which is in the above snippet, specifies to load the URL in a new tab.</li>
-</p>
+</ul>
 
 <p>
     <a href = "index.html">return to home page</a>
