adding the block level elements: p tag, blockquote tag, and the pre tag

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -10,5 +10,24 @@
   <header>
     <h1>Basic Tags</h1>
   </header>
+  <section>
+<h2>Block-level text containers</h2>
+<p>A block-level element always starts on a new line and takes up the full width available</p>
+<p>A "p" tag, a "blockquote" tag, and a "pre" tag are all examples of block level HTML elements</p>
+<p>A p-tag is used to define a simple paragraph of text</p>
+<p>A "blockquote" element indicates that the enclosed text is an extended quotation. Here is an example of the "blockquote" element in action: </p>
+<blockquote>
+<p>What makes a computer special? That it is a machine that can simulate another machine. </p>
+</blockquote>
+<cite> ~ Jesse Farmer, Adjacent Academies</cite>
+<p>For the blockquote tag, a URL for the source of the quotation may be given using the cite attribute, and the "cite" element (used above), can give a text representation of the source.</p>
+<p>A p tag is used to specify preformatted text:</p>
+<pre>The text in a "pre" element is displayed in a fixed-width font, usually in the Courier font.</pre>
+<pre>The text in a "pre" element preserves    <en>spaces</en>  and
+  <en>line breaks</en>. Thus,   the text is displayed exactly as it is
+  written in the    HTML source code.
+</pre>
+<p>The pre tag is often used to display language examples because it displays the code as it is typed.</p>
+  </section>
 </body>
 </html>
