Background and Return to home link

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -30,4 +30,8 @@
 <p>The pre tag is often used to display language examples because it displays the code as it is typed.</p>
   </section>
 </body>
+
+<p>
+  <a href = "index.html">return to home page</a>
+</p>
 </html>
