--- a/List.html
+++ b/List.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List</title>
+    <link rel="stylesheet" href="List.css">
 </head>
 <h1>Lists</h1>
 
@@ -23,7 +24,12 @@
             <strong>Ordered lists</strong> are for lists where the order of the items does matter, such as a recipe. These are wrapped in an "ol" element.
         </li>
     </ol>
+    <p>Each item inside the lists is put inside an "li" (list item) element</p>
     </p>
     </section>
+
+<p>
+    <a href = "index.html">return to home page</a>
+</p>
 </body>
 </html>
