added tables and list to Basic Tag

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -30,7 +30,44 @@
 <p>The pre tag is often used to display language examples because it displays the code as it is typed.</p>
   </section>
 </body>
+<body>
+  <h2>Lists</h2>
+  <section>
+  <p> A lot of the web's content is lists and HTML has special elements for these. Marking up lists always consists of at least 2 elements. 
+  The most common list types are ordered and unordered lists:
+  </p>
+  <p>
+  <ol>
+      <li> <strong></strong>
+          <strong>Unordered lists </strong> are for lists where the order of the items doesn't matter, such as a shopping list. These are wrapped in a "ul" element.
+      </li>
+      <li>
+          <strong>Ordered lists</strong> are for lists where the order of the items does matter, such as a recipe. These are wrapped in an "ol" element.
+      </li>
+  </ol>
+  <p>Each item inside the lists is put inside an "li" (list item) element.</p>
+  </p>
+  </section>
+<h2>Tables</h2>
+<section>
+  <p>A table is a structured set of data made up of rows and columns (<strong>tabular data</strong>. </p>
+</section>
 
+  <p>Creating a Table</p>
+  <ol>
+      <li>
+          First of all, make a locap copy of <a href="https://github.com/mdn/learning-area/blob/master/html/tables/basic/blank-template.html">blank-template.html</a> 
+          and <a href="https://github.com/mdn/learning-area/blob/master/html/tables/basic/minimal-table.css">minimal-table.css</a> in a new directory on your local machine. 
+      </li>
+      <li>
+          The content of every table is enclosed by these two tags : "tables" element Add these inside the body of your HTML.
+      </li>
+  </ol>
+<p>
+  <a href = "index.html">return to home page</a>
+</p>
+</body>
+</html>
 <p>
   <a href = "index.html">return to home page</a>
 </p>
