--- a/basic-tags.html
+++ b/basic-tags.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="basic-tags.css">
   <title>One Column Layout</title>
 </head>
 <body>
@@ -60,7 +61,14 @@
           and <a href="https://github.com/mdn/learning-area/blob/master/html/tables/basic/minimal-table.css">minimal-table.css</a> in a new directory on your local machine. 
       </li>
       <li>
-          The content of every table is enclosed by these two tags : "tables" element Add these inside the body of your HTML.
+    
+          The content of every table is enclosed by these two tags : <img src="tables.jpeg" alt = "img" width ="200" height="20"> </p>
+          element Add these inside the body of your HTML.
+      </li>
+
+      <li>
+        The smallest container inside a table is a table cell, which is created by a <img src="tables2.jpeg" alt="tables" width="100" height="20">
+
       </li>
   </ol>
 <p>
