--- a/basic-tags.html
+++ b/basic-tags.html
@@ -30,11 +30,22 @@
 </pre>
 <p>The pre tag is often used to display language examples because it displays the code as it is typed.</p>
   </section>
+
+  <section>
+  <h2>Inline Text Styling</h2>
+
+  </section>
+
+
+
+
+
+
 </body>
 <body>
   <h2>Lists</h2>
   <section>
-  <p> A lot of the web's content is lists and HTML has special elements for these. Marking up lists always consists of at least 2 elements. 
+  <p> A lot of the web's content is lists and HTML has special elements for these. Marking up lists always consists of at least 2 elements.
   The most common list types are ordered and unordered lists:
   </p>
   <p>
@@ -57,11 +68,11 @@
   <p>Creating a Table</p>
   <ol>
       <li>
-          First of all, make a locap copy of <a href="https://github.com/mdn/learning-area/blob/master/html/tables/basic/blank-template.html">blank-template.html</a> 
-          and <a href="https://github.com/mdn/learning-area/blob/master/html/tables/basic/minimal-table.css">minimal-table.css</a> in a new directory on your local machine. 
+          First of all, make a locap copy of <a href="https://github.com/mdn/learning-area/blob/master/html/tables/basic/blank-template.html">blank-template.html</a>
+          and <a href="https://github.com/mdn/learning-area/blob/master/html/tables/basic/minimal-table.css">minimal-table.css</a> in a new directory on your local machine.
       </li>
       <li>
-    
+
           The content of every table is enclosed by these two tags : <img src="tables.jpeg" alt = "img" width ="200" height="20"> </p>
           element Add these inside the body of your HTML.
       </li>
