Describing the em and i tags

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -33,7 +33,11 @@
 
   <section>
   <h2>Inline Text Styling</h2>
-
+  <p>Contrast to block-level text containers, inline text elements do not start on a new line and only take up as much width as necessary.</p>
+  <p>The "em", "i", "strong", and "b" tags are all examples of inline text elements in HTML.</p>
+  <p>The <em>"em" element</em> adds an <em>emphasis</em> to a particular inline text. This elements takes on an italic form in the broswer:</p>
+  <p>The <i>"i" tag</i> is similar to the "em" tag as it defines a part of text in an alternate voice or mood which is typically displayed in italic </p>
+  <p>The <i>i tag</i> can be used to indicate technical terms, phrases in other languages, or a thought.</p>
   </section>
 
 
