--- a/structure.html
+++ b/structure.html
@@ -15,11 +15,11 @@
 <p>
   <ol>
     <li>You <em>must</em> start every HTML document with "!DOCTYPE html" which is a required preamble that ensures your document behaves correctly.</li>
-    <li>Second, use the <strong>"html"</strong> element. This element wraps all the content on the entire page and is sometimes known as the root element. </li>
-    <li>Third, the <strong>"head"</strong> element acts as a container for all the information you want to include on an HTML page that is not the content you are showing. </li>
-    <li>Following the "head" element, the <strong>"meta charset = utf-8"</strong> element sets your document to use UTF-8 which includes most characters from the majority of written documents. This element ensures that your document is fit to withstand the textual content you include on it. </li>
-    <li>Fourthly, the <strong>"title"</strong> element sets the title for your page which appears in the brower tab that your page is loaded in. </li>
-    <li>Lastly, the <strong>"body"</strong> element contains <em>all</em> the content that you want to show to web users when they visit your page, whether that's text, images, videos, games, playable audio tracks, or whatever else.</li>
+    <li>Second, use the <img src="doc.jpeg" alt="doc" width="100" height="20"> element. This element wraps all the content on the entire page and is sometimes known as the root element. </li>
+    <li>Third, the <img src="head.jpeg" alt="head" width="75" height="20">element acts as a container for all the information you want to include on an HTML page that is not the content you are showing. </li>
+    <li>Following the "head" element, the <img src="meta.jpeg" alt="meta" width="200" height="40"> element sets your document to use UTF-8 which includes most characters from the majority of written documents. This element ensures that your document is fit to withstand the textual content you include on it. </li>
+    <li>Fourthly, the <img src="title.jpeg" alt="title" width="100" height="20"> element sets the title for your page which appears in the brower tab that your page is loaded in. </li>
+    <li>Lastly, the <img src="body.jpeg" alt="body" width="100" height="20"> element contains <em>all</em> the content that you want to show to web users when they visit your page, whether that's text, images, videos, games, playable audio tracks, or whatever else.</li>
   </ol>
   <p class = "shortcuts">You can either use the shortcut "html" or an "!" to automatically make these elements appear in order on your HTML document. </h4>
 <p>For a more detailed resource
