Adding the descriptions for the strong and b tags as well as the heading elements

--- a/basic-tags.html
+++ b/basic-tags.html
@@ -37,7 +37,21 @@
   <p>The "em", "i", "strong", and "b" tags are all examples of inline text elements in HTML.</p>
   <p>The <em>"em" element</em> adds an <em>emphasis</em> to a particular inline text. This elements takes on an italic form in the broswer:</p>
   <p>The <i>"i" tag</i> is similar to the "em" tag as it defines a part of text in an alternate voice or mood which is typically displayed in italic </p>
-  <p>The <i>i tag</i> can be used to indicate technical terms, phrases in other languages, or a thought.</p>
+  <p>The <i>"i" tag</i> can be used to indicate technical terms, phrases in other languages, or thoughts.</p>
+  <p>The <strong>"strong" tag</strong> defines a part of text as having strong importance, seriousness, or urgency. In browsers, this element makes its contents appear in <strong>bold</strong> type.</p>
+  <p>The <b>"b" tag </b>is used similarly to the "strong" tag to higlight text in bold, in order to make a text obvious for its user audience.</p>
+  </section>
+
+  <section>
+    <h2>Headings</h2>
+    <p>There are six HTML heading elements: h1, h2, h3, h4, h5, and h6.</p>
+    <p>H1 often defines the most important heading and H6 often defines the least important heading:</p>
+    <h1>This is heading 1</h1>
+    <h2>This is heading 2</h2>
+    <h3>This is heading 3</h3>
+    <h4>This is heading 4</h4>
+    <h5>This is heading 5</h5>
+    <h6>This is heading 6</h6>
   </section>
 
 
