added names and more tables

--- a/index.html
+++ b/index.html
@@ -47,10 +47,15 @@
 
 <p>
   <a href="basic-tags.html">Basic Tags</a>
+
+  
+  
 </p>
 
 
   </div>
+<p1>Made by Ellie Bowers and Amelia McDonnell</p1>
+
 
 </body>
 </html>
