--- a/basic-tags.html
+++ b/basic-tags.html
@@ -56,13 +56,28 @@
   </ol>
   <p>Each item inside the lists is put inside an "li" (list item) element.</p>
   </p>
+  <table>
+    <td>
+      For more information about lists <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li#attributes">click here</a>
+    </td>
+
+</table>
+ 
   </section>
 <h2>Tables</h2>
 
   <section>
-The <img src="table.jpeg" alt="table" width="100" height="20">element represents tabular data — that is, information presented in a two-dimensional table comprised of rows and columns of cells containing data. 
-The row's cells can then be established using a mix of <img src = "td.jpeg" alt = "td" weight ="100" height = "20"> (data cell) and <img src = "th.jpeg" alt = "th" weight ="100" height = "20"> (header cell) elements.
-</p>
+    <p>
+    The <img src = "tr.jpeg" alt = "tr" weight ="100" height = "20">HTML element defines a row of cells in a table. 
+    The row's cells can then be established using a mix of <img src = "td.jpeg" alt = "td" weight ="100" height = "20"> (data cell) and <img src = "th.jpeg" alt = "th" weight ="100" height = "20"> (header cell) elements.
+    </p>
+    <p>
+      The <img src = "tbody.jpeg" alt = "tbody" weight = "100" height = "15"> element encapsulates a set of table rows (<img src = "tr.jpeg" weight = "75" height = "20"> elements), indicating that they comprise the body of the table (<img src = "table.jpeg" weight = "100" height = "15">).
+    </p>
+    <p>The <img src = "colgroup.jpeg" weight = "100" height ="15"></p> HTML element defines a group of columns within a table.
+    <p>
+      The <img src = "thread.jpeg" weight = "200" height = "15"> HTML element defines a set of rows defining the head of the columns of the table.
+    </p>
 <style>
   table, td, th {
     border: 1px solid #333;
@@ -154,6 +169,13 @@ The row's cells can then be established using a mix of <img src = "td.jpeg" alt 
 
   </tbody>
 </table>
+<p>
+  <table>
+    <td>For more information about tables <a href = "https://developer.mozilla.org/en-US/docs/Web/HTML/Element/table">click here</a></td>
+  </table>
+
+</p>
+
 <a href = "index.html">return to home page</a> 
 
 </body>
