--- a/basic-tags.html
+++ b/basic-tags.html
@@ -56,6 +56,16 @@
   </ol>
   <p>Each item inside the lists is put inside an "li" (list item) element.</p>
   </p>
+  <p>
+    The <img src="ul.jpeg" weight = "100" height="15"> element represents an unordered list of items, typically rendered as a bulleted list.
+  </p>
+  <p>The <img src = "li.jpeg" weight = "100" height = "15" > HTML element is used to represent an item in a list. It must be contained in a parent element: an ordered list 
+    (<img src = "ol.jpeg" weight = "100" height = "15">), an unordered list (<img src="ul.jpeg" weight = "100" height="15"> ), or a menu (<img src = "menu.jpeg" weight = "100" height = "15">).
+    In menus and unordered lists, list items are usually displayed using bullet points. In ordered lists, they are usually displayed with an ascending counter on the left, such as a number or letter.
+  </p>
+  <p>
+    The <img src = "ol.jpeg" weight = "100" height = "15"> HTML element represents an ordered list of items — typically rendered as a numbered list.
+  </p>
   <table>
     <td>
       For more information about lists <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/li#attributes">click here</a>
@@ -68,11 +78,11 @@
 
   <section>
     <p>
-    The <img src = "tr.jpeg" alt = "tr" weight ="100" height = "20">HTML element defines a row of cells in a table. 
-    The row's cells can then be established using a mix of <img src = "td.jpeg" alt = "td" weight ="100" height = "20"> (data cell) and <img src = "th.jpeg" alt = "th" weight ="100" height = "20"> (header cell) elements.
+    The <img src = "tr.jpeg" alt = "tr" weight ="100" height = "15">HTML element defines a row of cells in a table. 
+    The row's cells can then be established using a mix of <img src = "td.jpeg" alt = "td" weight ="100" height = "15"> (data cell) and <img src = "th.jpeg" alt = "th" weight ="100" height = "20"> (header cell) elements.
     </p>
     <p>
-      The <img src = "tbody.jpeg" alt = "tbody" weight = "100" height = "15"> element encapsulates a set of table rows (<img src = "tr.jpeg" weight = "75" height = "20"> elements), indicating that they comprise the body of the table (<img src = "table.jpeg" weight = "100" height = "15">).
+      The <img src = "tbody.jpeg" alt = "tbody" weight = "100" height = "15"> element encapsulates a set of table rows (<img src = "tr.jpeg" weight = "75" height = "15"> elements), indicating that they comprise the body of the table (<img src = "table.jpeg" weight = "100" height = "15">).
     </p>
     <p>The <img src = "colgroup.jpeg" weight = "100" height ="15"></p> HTML element defines a group of columns within a table.
     <p>
