--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
   
   
 </p>
-
+<p>
+  <a href="multimedia.html"> Multimedia</a>
+</p>
 
   </div>
 <p1>Made by Ellie Bowers and Amelia McDonnell</p1>
