added css link to index

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
   <a href="multimedia.html"> Multimedia</a>
 </p>
 
+<p>
+  <a href="basic-css.html">CSS</a>
+</p>
+
   </div>
 <p1>Made by Ellie Bowers and Amelia McDonnell</p1>
 
