return to home link

--- a/basic-css.html
+++ b/basic-css.html
@@ -12,3 +12,8 @@
 <p style="color:purple" The CSS color property can change the font color of a text.</p>
 </body>
 </html>
+
+
+<p>
+  <a href = "index.html">return to home page</a>
+</p>
