worked up until font size

--- a/basic-css.html
+++ b/basic-css.html
@@ -9,6 +9,12 @@
 <body>
 <h1>Common CSS Properties</h1>
 <p>The style attribute specifies an inline style for an element. There are many CSS properties that can be used with the style attribute.</p>
-<p style="color:purple">The CSS color property can change the font color of a text.</p>
+<p style="color:purple"><strong>Color:</strong> The CSS color property can change the font color of a text.</p></style>
+<p style="text-align:center"><strong>Text-align:</strong> The CSS text-align property can be used for horizontal alignment of the inner content of a block element.</p></style>
+<span><strong>Text-transform:</strong></span><p style="text-transform: uppercase"> The CSS text-transform property controls the capitalization of text.</p></style>
+<p style="line-height: 50px;"><strong>Line-height:</strong> The CSS line-height property specifies the height of a given line. The line height can be set in centimeters, pixels, points, length(in em), and percentages. For percentages, 100% is equivalent to the original line height.</p></style>
+<p style="letter-spacing: 5px"><strong>Letter-spacing:</strong> The CSS letter-spacing property increases or decreases the space between characters in a text. </p></style>
+<p style="font-style: oblique"><strong>Font-style:</strong> The CSS font-style property is used to set the style of the font to italic or oblique. This font is oblique.</p></style>
+<p style="font-size:28 px;"><strong>Font-size:</strong> The CSS font-style property is used to set the font size of a text.</p></style>
 </body>
 </html>
