CSS (Ellie's half)

--- a/basic-css.html
+++ b/basic-css.html
@@ -9,17 +9,80 @@
 <body>
 <h1>Common CSS Properties</h1>
 <p>The style attribute specifies an inline style for an element. There are many CSS properties that can be used with the style attribute.</p>
-<p style="color:purple"><strong>Color:</strong> The CSS color property can change the font color of a text.</p></style>
-<p style="text-align:center"><strong>Text-align:</strong> The CSS text-align property can be used for horizontal alignment of the inner content of a block element.</p></style>
-<span><strong>Text-transform:</strong></span><p style="text-transform: uppercase"> The CSS text-transform property controls the capitalization of text.</p></style>
-<p style="line-height: 50px;"><strong>Line-height:</strong> The CSS line-height property specifies the height of a given line. The line height can be set in centimeters, pixels, points, length(in em), and percentages. For percentages, 100% is equivalent to the original line height.</p></style>
-<p style="letter-spacing: 5px"><strong>Letter-spacing:</strong> The CSS letter-spacing property increases or decreases the space between characters in a text. </p></style>
-<p style="font-style: oblique"><strong>Font-style:</strong> The CSS font-style property is used to set the style of the font to italic or oblique. This font is oblique.</p></style>
-<p style="font-size:28 px;"><strong>Font-size:</strong> The CSS font-style property is used to set the font size of a text.</p></style>
-</body>
-</html>
+<p style="color: navy">The CSS color property can change the font color of a text.</p>
+<p style = "background-color: lightblue"> The CSS background-color property sets the background color of an element </p>
+<div style="background-image: url('background.jpeg');">The CSS background-image property specifies an image to use as the background of an element</div>
+<style>
+  ul.a {list-style-type: square;}
+</style>
+<ul class = "a">
+  <li>This CSS list-style-type property specfies the type of list-item marker in a list </li>
+</ul>
+<p>The CSS height and width property are used to set the height and width of an element
+</p>
+<img src = "image.jpeg" weight = "200" height = "150"> 
 
+
+
+<style>
+  p.ex1 {
+    margin: 35px 70px
+  }
+</style>
+<p class = "ex1">This CSS margin properties are used to create space around elements, outside of any defined borders.</p>
+<p class = "ex1">with CSS, you have full control over the margins. There are properties for setting the margin for each side of an element (top, right, bottom, and left).</p>
+</p>
+
+<style>
+  div{
+    border: 1px solid black;
+  padding-top: 50px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
+</style>
+<div>The CSS padding properties are used to generate space around an element's content, inside of any defined borders.
+
+  With CSS, you have full control over the padding. There are properties for setting the padding for each side of an element (top, right, bottom, and left).</div>
+</style>
+
+<p>The CSS border-style property specifies what kind of border to display</p>
+<p>The following Values are allowed</p>
+<p>The border-style property can have from one to four values (for the top border, right border, bottom border, and the left border).</p>
+
+<style>
+p.dotted {border-style: dotted;}
+p.dashed {border-style: dashed;}
+p.solid {border-style: solid;}
+p.double {border-style: double;}
+p.groove {border-style: groove;}
+p.ridge {border-style: ridge;}
+p.inset {border-style: inset;}
+p.outset {border-style: outset;}
+p.none {border-style: none;}
+p.hidden {border-style: hidden;}
+p.mix {border-style: dotted dashed solid double;}
+</style>
+<p class="dotted">A dotted border.</p>
+<p class="dashed">A dashed border.</p>
+<p class="solid">A solid border.</p>
+<p class="double">A double border.</p>
+<p class="groove">A groove border.</p>
+<p class="ridge">A ridge border.</p>
+<p class="inset">An inset border.</p>
+<p class="outset">An outset border.</p>
+<p class="none">No border.</p>
+<p class="hidden">A hidden border.</p>
+<p class="mix">A mixed border.</p></body>
+</html>
+ 
 
 <p>
   <a href = "index.html">return to home page</a>
 </p>
+
+
+
+
+
