--- a/basic-tags.html
+++ b/basic-tags.html
@@ -22,7 +22,7 @@
 </blockquote>
 <cite> ~ Jesse Farmer, Adjacent Academies</cite>
 <p>For the blockquote tag, a URL for the source of the quotation may be given using the cite attribute, and the "cite" element (used above), can give a text representation of the source.</p>
-<p>A p tag is used to specify preformatted text:</p>
+<p>A "p" tag is used to specify preformatted text:</p>
 <pre>The text in a "pre" element is displayed in a fixed-width font, usually in the Courier font.</pre>
 <pre>The text in a "pre" element preserves    <en>spaces</en>  and
   <en>line breaks</en>. Thus,   the text is displayed exactly as it is
