--- a/basic-css.html
+++ b/basic-css.html
@@ -16,11 +16,11 @@
   ul.a {list-style-type: square;}
 </style>
 <ul class = "a">
-  <li>This CSS list-style-type property specfies the type of list-item marker in a list </li>
+  <li>This CSS list-style-type property specifies the type of list-item marker in a list. </li>
 </ul>
-<p>The CSS height and width property are used to set the height and width of an element
+<p>The CSS height and width property are used to set the height and width of an element.
 </p>
-<img src = "image.jpeg" weight = "200" height = "150"> 
+<img src = "image.jpeg" weight = "200" height = "150">
 
 
 
@@ -29,8 +29,8 @@
     margin: 35px 70px
   }
 </style>
-<p class = "ex1">This CSS margin properties are used to create space around elements, outside of any defined borders.</p>
-<p class = "ex1">with CSS, you have full control over the margins. There are properties for setting the margin for each side of an element (top, right, bottom, and left).</p>
+<p class = "ex1">The CSS margin properties are used to create space around elements, outside of any defined borders.</p>
+<p class = "ex1">With CSS, you have full control over the margins. There are properties for setting the margin for each side of an element (top, right, bottom, and left).</p>
 </p>
 
 <style>
@@ -76,13 +76,8 @@ p.mix {border-style: dotted dashed solid double;}
 <p class="hidden">A hidden border.</p>
 <p class="mix">A mixed border.</p></body>
 </html>
- 
+
 
 <p>
   <a href = "index.html">return to home page</a>
 </p>
-
-
-
-
-
