adding the rest of the CSS properties and fixing errors

--- a/basic-css.html
+++ b/basic-css.html
@@ -9,13 +9,14 @@
 <body>
 <h1>Common CSS Properties</h1>
 <p>The style attribute specifies an inline style for an element. There are many CSS properties that can be used with the style attribute.</p>
-<p style="color:purple"><strong>Color:</strong> The CSS color property can change the font color of a text.</p></style>
-<p style="text-align:center"><strong>Text-align:</strong> The CSS text-align property can be used for horizontal alignment of the inner content of a block element.</p></style>
-<span><strong>Text-transform:</strong></span><p style="text-transform: uppercase"> The CSS text-transform property controls the capitalization of text.</p></style>
-<p style="line-height: 50px;"><strong>Line-height:</strong> The CSS line-height property specifies the height of a given line. The line height can be set in centimeters, pixels, points, length(in em), and percentages. For percentages, 100% is equivalent to the original line height.</p></style>
-<p style="letter-spacing: 5px"><strong>Letter-spacing:</strong> The CSS letter-spacing property increases or decreases the space between characters in a text. </p></style>
-<p style="font-style: oblique"><strong>Font-style:</strong> The CSS font-style property is used to set the style of the font to italic or oblique. This font is oblique.</p></style>
-<p style="font-size:28 px;"><strong>Font-size:</strong> The CSS font-size property is used to set the font size of a text.</p></style>
+<p style="color:purple"><strong>Color:</strong> The CSS color property can change the font color of a text.</p>
+<p style="text-align:center"><strong>Text-align:</strong> The CSS text-align property can be used for horizontal alignment of the inner content of a block element.</p>
+<p style="text-transform: uppercase"><strong>Text-transform:</strong> The CSS text-transform property controls the capitalization of text.</p>
+<p style="line-height: 50px;"><strong>Line-height:</strong> The CSS line-height property specifies the height of a given line. The line height can be set in centimeters, pixels, points, length(in em), and percentages. For percentages, 100% is equivalent to the original line height.</p>
+<p style="letter-spacing: 5px"><strong>Letter-spacing:</strong> The CSS letter-spacing property increases or decreases the space between characters in a text. </p>
+<p style="font-style: oblique"><strong>Font-style:</strong> The CSS font-style property is used to set the style of the font to italic or oblique. This font is oblique.</p>
+<p style="font-size: 150%"><strong>Font-size:</strong> The CSS font-size property is used to set the font size of a text.</p>
+<p style="font-weight: bold"><strong>Font-weight:</strong> The CSS font-weight property is used to indicate how bold the text characters should be. The font-weight property can be assigned a multiple of 100, from 100 to 900 (900 being the boldest). This property can also be assigned normal, bold, lighter, and bolder.</p>
 <p style = "background-color: lightblue"> The CSS background-color property sets the background color of an element </p>
 <div style="background-image: url('background.jpeg');">The CSS background-image property specifies an image to use as the background of an element</div>
 <style>
@@ -26,7 +27,7 @@
 </ul>
 <p>The CSS height and width property are used to set the height and width of an element.
 </p>
-<img src = "image.jpeg" weight = "200" height = "150">
+<img src = "image.jpeg" height = "150">
 
 
 
